# mikro

./: .dockerignore  .env.example  .gitignore  .prettierignore  ACCOUNTING.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  PERF_NOTES.md  QCOBRO.md  README.md  agents.yaml  agents.yaml.example  autopilot-gentle.yaml  autopilot-negotiation.yaml  autopilot.yaml  compose.dev.yaml  compose.yaml  eslint.config.mjs  google-service-account.json  lerna.json  loan.json  mikro.json.example  package-lock.json  package.json  pencil.pen  plan.txt  tsconfig.json
.claude/: settings.json
.claude/commands/: daily-issues.md
.claude/commands/issues/: daily.md  report.md
.claude/kaizen/: log.md
.claude/output-styles/: caveman.md
.claude/ship/: add-contract-copilot-card.md  add-copilot-clear-history.md  add-customer-documents.md  add-customer-loan-copilot-cards.md  add-evaluator-mobile-role.md  add-feed-card-narratives.md  add-founder-copilot.md  add-founder-feed-filters.md  add-founder-feed.md  add-founder-tasks.md  extend-bug-report-native-capture.md  move-loan-statement-to-copilot.md  reframe-bug-report-as-feedback.md  retire-ops-dashboard-ui.md  unify-reporting-strategy.md
.cursor/commands/: create-validated-function.md  update-deps.md
.cursor/rules/: verify-changes.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/workflows/: build-android.yaml  build-dashboard.yaml  build-ios.yaml  deploy-apiserver.yaml  deploy-site.yaml  mobile-e2e.yaml  pr-checks.yaml  publish-apiserver.yaml  release.yaml
.husky/: pre-push
.scripts/: check-lockfile-platforms.mjs  export-loan-situation.ts  lending-cash-position.ts  migrate-json.ts  smoke-performance-trend.ts  verify-migration.ts
bug-reports/: 1783179058988-11111111.webm  1783179766499-11111111.webm  1783180250477-11111111.webm  1783182126204-11111111.webm  1783198817922-7a8bbcaa.webm
mods/agents/: .gitignore  .mocharc.json  CHANGELOG.md  README.md  mikro-test-session.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mods/agents/scripts/: generateExampleReport.ts
mods/agents/src/: config.ts  constants.ts  index.ts  logger.ts
mods/agents/test/: globalSetup.ts
mods/apiserver/: .dockerignore  .env.example  .gitignore  .mocharc.json  CHANGELOG.md  Dockerfile  README.md  docker-entrypoint.sh  package.json  prisma.config.ts  tsconfig.json  tsconfig.tsbuildinfo
mods/apiserver/prisma/: schema.prisma  seed.ts
mods/apiserver/scripts/: fix-prisma-esm.sh  seed-feed-events.mjs
mods/apiserver/src/: db.ts  index.ts  logger.ts  recognizedErrors.ts
mods/apiserver/test/: globalSetup.ts
mods/assistant/: .env.example  README.md  agent.md  ecosystem.config.js
mods/assistant/src/: config.ts  index.ts
mods/common/: .mocharc.json  CHANGELOG.md  README.md  package.json  tsconfig.tsbuildinfo
mods/common/docs/: collections-spec.md
mods/common/scripts/: generate-collections-spec.ts  render-samples.mjs  sampleFixtures.mjs
mods/common/src/: config.ts  files.ts  index.ts  jwt.ts  qrcode.ts
mods/common/test/: config.test.ts
mods/ctl/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
mods/ctl/output/: 10000.jwt  token.jwt
mods/ctl/src/: BaseCommand.ts  Help.ts  ListCommand.ts  MutationCommand.ts  errorHandler.ts  index.ts
mods/dashboard/: .env.example  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
mods/dashboard/.storybook/: main.ts  preview.ts
mods/dashboard/src/: App.tsx  index.css  main.tsx  server-stub.ts  vite-env.d.ts
mods/dashboard/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
mods/dashboard/src-tauri/capabilities/: default.json  notification.json  updater.json
mods/dashboard/src-tauri/icons/: icon.icns
mods/dashboard/src-tauri/src/: commands.rs  lib.rs  main.rs  save_dialog.rs
mods/mobile/: .env  .env.maestro  .gitignore  CHANGELOG.md  app.config.ts  eas-build-post-install.sh  eas.json  jest.config.js  package.json
mods/mobile/.maestro/: admin-role-switch.yaml  cobrar-payment.yaml  collector-promocionar.yaml  config.yaml  cuadre.yaml  dashboard.yaml  evaluator-actividad.yaml  evaluator-borradores.yaml  evaluator-descartar.yaml  evaluator-documentos.yaml  evaluator-golden-path.yaml  evaluator-reject-path.yaml  evaluator-solicitud-datos.yaml  login-screen.yaml  login.yaml  mock-server.js  navigation.yaml  run-tests.sh  ruta-client-detail.yaml  ruta-filters.yaml  search-client.yaml
mods/mobile/.scripts/: print-build-link.mjs
mods/mobile/.storybook/: index.tsx  main.ts  preview.tsx  storybook.requires.ts
mods/mobile/.storybook-web/: main.ts  preview-head.html  preview.tsx
mods/mobile/app/: _layout.tsx  cambiar-pin.tsx  cuadre.tsx  index.tsx  pago-confirmado.tsx  perfil.tsx  promocionar.tsx  sincronizar.tsx
mods/mobile/components/: ReceiptView.tsx  SolicitudSectionEdit.tsx
mods/mobile/lib/: api.ts  applicationFields.ts  applications.ts  auth.ts  authErrorLink.ts  contractPhoto.ts  dueLabel.ts  e2e.ts  e2eFixtures.ts  e2eMockLink.ts  inputFormat.ts  navigation.ts  printer.ts  session.ts  shareContract.ts  theme.ts  trpc.ts
modules/assistant/: .env.example  .gitignore  README.md  agent.md  ecosystem.config.js  package.json  tsconfig.tsbuildinfo
modules/assistant/src/: config.js  config.ts  conversations.js  conversations.ts  index.js  logger.js  logger.ts  members.ts  openai.js  openai.ts  tools.js  tools.ts  users.js  users.ts  webhook.js  webhook.ts
modules/common/: README.md  package.json
modules/common/src/: files.js  fonts.js  fonts.ts  index.js  index.ts  jwt.js  keygen.js  (+4 more)
modules/ctl/: README.md  package.json
openspec/: project.md
patches/: react-native-nitro-screen-recorder+0.7.0.patch
scripts/: generate-keys.ts
site/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/public/: site.webmanifest
site/scripts/: check-links.mjs  generate-favicons.mjs
site/src/: App.tsx  index.css  main.tsx
skills/: contrato-prestamo.skill  mikro-modelo-negocio.skill  mikro-score.skill
src/: generate-key.js  generate.js
(+1303 files in other folders)
