[package]
name = "mikro-dashboard"
version = "0.0.0"
description = "Mikro operations dashboard"
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri's mobile entry points and the desktop binary share.
[lib]
name = "mikro_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auto-update: the updater plugin checks the apiserver manifest endpoint and
# installs signed releases; the process plugin relaunches the app afterwards.
# Desktop-only — gated on the OS triple (Cargo dependency tables can't use
# Tauri's `cfg(desktop)`, which only exists for code). lib.rs registers them
# under `#[cfg(desktop)]`, which Tauri's build script does set for code.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
